adjusted buttons to linear gradient as flickering is fixed

--- a/frontend/src/components/AuthFormModal/AuthForm.css
+++ b/frontend/src/components/AuthFormModal/AuthForm.css
@@ -258,7 +258,7 @@
 .auth-next {
     width: 100%;
     height: 48px;
-    background: #D70466;
+    background: linear-gradient(to right,#E61E4D 0%,#E31C5F 50%,#D70466 100%);
     padding: 14px 24px;
     border: none;
     border-radius: 8px;
@@ -273,12 +273,12 @@
 }
 
 .auth-next:hover {
-    background-color: #E31C5F;
+    background: linear-gradient(to left,#E61E4D 0%, #E31C5F 50%,#D70466 100%);
 }
 
 .auth-next:active {
     transform: scale(0.96);
-    background: #FF385C;
+    background: linear-gradient(to right,#FF385C 100%,#E31C5F 50%,#D70466 0%);
 }
 
 .or-divider {
