--- a/frontend/src/components/Trips/Trips.css
+++ b/frontend/src/components/Trips/Trips.css
@@ -116,8 +116,12 @@
     transition: transform 0.2s ease-in-out;
 }
 
+.start-searching-link:hover {
+    background: linear-gradient(to left,#E61E4D 0%, #E31C5F 50%,#D70466 100%);
+}
+
 .start-searching-link:active {
-    background: #FF385C;
+    background: linear-gradient(to right,#FF385C 100%,#E31C5F 50%,#D70466 0%);
     transform: scale(0.95);
 }
 
